--- a/clinic/templates/clinic/appointment_list.html
+++ b/clinic/templates/clinic/appointment_list.html
@@ -109,7 +109,7 @@
                 <div class="pet-icon">{{ a.pet.name|slice:":1"|upper }}</div>
                 <div class="pet-details">
                   <div class="pet-name">{{ a.pet.name }}</div>
-                  <div class="pet-species">{{ a.pet.get_species_display }}</div>
+                  <div class="pet-species">{{ a.pet.get_species_display_full }}</div>
                 </div>
               </div>
               <div class="appointment-reason-box">
