--- a/clinic/templates/clinic/pet_list.html
+++ b/clinic/templates/clinic/pet_list.html
@@ -80,7 +80,7 @@
           </div>
           <div class="pet-info">
             <div class="pet-name">{{ pet.name }}</div>
-            <div class="pet-breed">{{ pet.get_species_display }}{% if pet.breed %} • {{ pet.breed }}{% endif %}</div>
+            <div class="pet-breed">{{ pet.get_species_display_full }}{% if pet.breed %} • {{ pet.breed }}{% endif %}</div>
           </div>
         </div>
         <div class="pet-details">
