--- a/vet/templates/vet/appointments.html
+++ b/vet/templates/vet/appointments.html
@@ -269,7 +269,7 @@
               <div class="pet-avatar">{{ appointment.pet.name|slice:":1"|upper }}</div>
               <div>
                 <div class="pet-name">{{ appointment.pet.name }}</div>
-                <div class="pet-species">{{ appointment.pet.get_species_display }}</div>
+                <div class="pet-species">{{ appointment.pet.get_species_display_full }}</div>
               </div>
             </div>
           </td>
