--- a/vet_portal/templates/vet_portal/profile.html
+++ b/vet_portal/templates/vet_portal/profile.html
@@ -687,7 +687,7 @@
   <!-- Help Card -->
   <div class="help-card">
     <p>Need help with your account or want to change restricted information?</p>
-    <a href="mailto:epetcarewebsystem@gmail.com">📧 Contact Support</a>
+    <p style="margin-top: 8px; font-weight: 600; color: #6b705c;">📧 epetcarewebsystem@gmail.com</p>
   </div>
 </div>
 
