--- a/vet_portal/templates/vet_portal/records/detail.html
+++ b/vet_portal/templates/vet_portal/records/detail.html
@@ -181,7 +181,7 @@
           </div>
           <div class="quick-info-item">
             <span class="quick-info-label">Species</span>
-            <span class="quick-info-value">{{ pet.get_species_display }}</span>
+            <span class="quick-info-value">{{ pet.get_species_display_full }}</span>
           </div>
           <div class="quick-info-item">
             <span class="quick-info-label">Breed</span>
