--- a/vet_portal/templates/vet_portal/appointments/detail.html
+++ b/vet_portal/templates/vet_portal/appointments/detail.html
@@ -240,7 +240,7 @@
           </div>
           <div class="quick-info-item">
             <span class="quick-info-label">Species</span>
-            <span class="quick-info-value">{{ appointment.pet.get_species_display }}</span>
+            <span class="quick-info-value">{{ appointment.pet.get_species_display_full }}</span>
           </div>
           <div class="quick-info-item">
             <span class="quick-info-label">Breed</span>
